Added precomputed integrals
Added precomputed integrals and corrected array W computation.
Asserting N > 0.
Modified technical details in notes.

--- a/notes.tex
+++ b/notes.tex
@@ -245,7 +245,7 @@
     \end{equation}
 
     \section{Szczegóły techniczne}
-    W ramach aproksymacji zadanego równania całki funkcji bazowych liczone są numerycznie, wartości obliczone w poprzedniej sekcji nie są wykorzystywane.
+    W ramach aproksymacji zadanego równania całki funkcji bazowych liczone są numerycznie, w związku z czym wartości obliczone w poprzedniej sekcji nie są wymagane.
     Program jest napisany w języku \textit{Python 3.12.3} i wykorzystuje biblioteki:
     \begin{itemize}
         \item \textit{matplotlib 3.6.3} - do wizualizacji danych,
