--- a/notes.tex
+++ b/notes.tex
@@ -70,6 +70,14 @@
             0,& \text{w przeciwnym wypadku}
         \end{cases} \label{e_def}
     \end{equation}
+    \begin{equation}
+        e_i'(x) =
+        \begin{cases}
+            \frac{1}{x_i-x_{i-1}},& x \in (x_{i-1}, x_i) \\
+            \frac{1}{x_i-x_{i+1}},& x \in (x_i, x_{i+1}) \\
+            0,& \text{w przeciwnym wypadku}
+        \end{cases} \label{eprime_def}
+    \end{equation}
     Aproksymujemy rozwiązanie liniowe kombinacją funkcji bazowych \(e_i = e_i(x)\) z przesunięciem \(2e_n\) (zatem zakładamy, że \(w_n = 2\)), co wynika z (\ref{dirichlet}):
     \begin{gather}
         \phi \approx 2e_n + \sum_{i=0}^{n-1} w_i e_i \label{phi_approx}\\
@@ -167,16 +175,16 @@
         \end{cases} \nonumber \\
         &=
         \begin{cases}
-            e_0(0)^2 - \frac{3}{n},& i = j = 0 \\
-            e_i(0)^2 - \frac{6}{n},& i = j \neq 0 \\
-            e_i(0)e_j(0) + \frac{3}{n},& |i-j| = 1 \\
+            e_0(0)^2 - \frac{n}{3},& i = j = 0 \\
+            e_i(0)^2 - \frac{2n}{3},& i = j \neq 0 \\
+            e_i(0)e_j(0) + \frac{n}{3},& |i-j| = 1 \\
             e_i(0)e_j(0),& |i-j| \geq 2
         \end{cases} \nonumber \\
         &=
         \begin{cases}
-            1-\frac{3}{n},& i = j = 0 \\
-            -\frac{6}{n},& i = j \neq 0 \\
-            \frac{3}{n},& |i-j| = 1 \\
+            1-\frac{n}{3},& i = j = 0 \\
+            -\frac{2n}{3},& i = j \neq 0 \\
+            \frac{n}{3},& |i-j| = 1 \\
             0,& |i-j| \geq 2
         \end{cases} \label{bij_val}
     \end{align}
@@ -189,12 +197,12 @@
         \end{cases} \nonumber \\
         &=
         \begin{cases}
-            2e_n(0)e_{n-1}(0) + \frac{6}{n},& j = n-1 \\
+            2e_n(0)e_{n-1}(0) + \frac{2n}{3},& j = n-1 \\
             2e_n(0)e_j(0),& j \neq n-1
         \end{cases} \nonumber \\
         &=
         \begin{cases}
-            \frac{6}{n},& j = n-1 \\
+            \frac{2n}{3},& j = n-1 \\
             0,& j \neq n-1
         \end{cases} \label{bnj_val}
     \end{align}
@@ -220,13 +228,13 @@
         \end{bmatrix}
         =
         \begin{bmatrix}
-            1-\frac{3}{n} &  \frac{3}{n} &  0 &  0 &  0 & \cdots &  0 \\
-            \frac{3}{n} & -\frac{6}{n} &  \frac{3}{n} &  0 &  0 & \cdots &  0 \\
-            0 &  \frac{3}{n} & -\frac{6}{n} &  \frac{3}{n} &  0 & \cdots &  0 \\
-            0 &  0 &  \frac{3}{n} & -\frac{6}{n} &  \frac{3}{n} & \cdots &  0 \\
-            0 &  0 &  0 &  \frac{3}{n} & -\frac{6}{n} & \cdots &  0 \\
+            1-\frac{n}{3} &  \frac{n}{3} &  0 &  0 &  0 & \cdots &  0 \\
+            \frac{n}{3} & -\frac{2n}{3} &  \frac{n}{3} &  0 &  0 & \cdots &  0 \\
+            0 &  \frac{n}{3} & -\frac{2n}{3} &  \frac{n}{3} &  0 & \cdots &  0 \\
+            0 &  0 &  \frac{n}{3} & -\frac{2n}{3} &  \frac{n}{3} & \cdots &  0 \\
+            0 &  0 &  0 &  \frac{n}{3} & -\frac{2n}{3} & \cdots &  0 \\
             \vdots & \vdots & \vdots & \vdots & \vdots & \ddots & \vdots \\
-            0 &  0 &  0 &  0 &  0 & \cdots & -\frac{6}{n}
+            0 &  0 &  0 &  0 &  0 & \cdots & -\frac{2n}{3}
         \end{bmatrix}
         ^{-1}
         \begin{bmatrix}
@@ -236,7 +244,7 @@
             -\frac{3\rho}{n\epsilon_r} \\
             \vdots \\
             -\frac{3\rho}{n\epsilon_r} \\
-            -\frac{3\rho}{n\epsilon_r}-\frac{6}{n}
+            -\frac{3\rho}{n\epsilon_r}-\frac{2n}{3}
         \end{bmatrix} \label{matrix_nums}
     \end{equation}
     Przy aproksymacji (\ref{phi_approx}) założyliśmy, że \(w_n = 2\). Stąd możemy już obliczyć wszystkie wartości ciągu \((w_0, w_1, \ldots, w_n)\) i zaproksymować \(\phi\) zgodnie z (\ref{phi_approx}):
